--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+    
+    <li>
+      <%= link_to "タスク登録", new_task_path %>
+    </li>
+    
     <%= yield %>
   </body>
 </html>
