--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,1 +1,24 @@
-<h1>タスク登録</h1>
+<div class="container px-5 px-sm-0 mt-3">
+
+  <h2 class="text-center mt-3 mb-5">タスク登録</h2>
+  
+  <div class="form">
+    <%= form_with model:@task,local:true do |f| %>
+    
+      <div class="form-group">
+        <h5 for="task_name">タスク名</h5>
+        <%= f.text_field :task_name, class: "form-control task_name" %>
+      </div>
+      <div class="form-group">
+        <h5 for="detail">詳細</h5>
+        <%= f.text_area :detail, :size=>"60x10", class: "form-control detail" %>
+      </div>
+      <div class="form-group">
+            <%= f.submit "登録する", class: "btn btn-outline-success" %>
+      </div>
+      
+    <% end %>
+  </div>
+
+
+</div>
