--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,1 +1,19 @@
-<h1>タスク一覧</h1>
+<div class="container px-5 px-sm-0 mt-3">
+
+  <h2 class="text-center mt-3 mb-5">タスク一覧</h2>
+  <div class="container mt-5">
+    <div class="row row-cols-1 row-cols-sm-2 row-eq-height">
+
+      <% @tasks.each do |task| %>
+        <div class="card border-secondary mb-3">
+          <div class="card-body">
+            <h5 class="card-title mt-3"><%= link_to task.task_name, task_path(task), class:"text-dark d-flex align-items-end" %></h5>
+            <div class="task-created mt-2"><%= task.created_at.strftime("%Y-%m-%d %H:%M:%S") %></div>
+          </div>
+        </div>
+      <% end %>
+
+    </div>
+  </div>
+
+</div>
