--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,1 +1,30 @@
-<h1>タスク詳細</h1>
+<div class="container px-5 px-sm-0 mt-3">
+
+  <h2 class="text-center mt-3 mb-5">タスク詳細</h2>
+
+  <table class="table table-light">
+    <tr>
+      <th>タスク名</th>
+      <th>登録日時</th>
+      <th></th>
+      <th></th>
+    </tr>
+
+    <tr>
+      <td><%= @task.task_name %></td>
+      <td><%= @task.created_at.strftime("%Y-%m-%d %H:%M:%S") %></td>
+      <td><%= link_to '編集', edit_task_path(@task), class: "btn btn-outline-success" %></td>
+      <td><%= link_to '削除', task_path(@task), class: "btn btn-outline-danger", method: :delete %></td>
+    </tr>
+  </table>
+
+  <table class="table table-light">
+    <tr>
+      <th>タスクの詳細</th>
+    </tr>
+    <tr>
+      <td class="w-75"><%= @task.detail %></td>
+    </tr>
+  </table>
+
+</div>
