--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,18 @@
   </head>
 
   <body>
-
-    <li>
-      <%= link_to "タスク登録", new_task_path %>
-    </li>
+    <header class="bg-white text-dark border-bottom">
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <ul class="navbar-nav ml-auto mb-2">
+          <li>
+            <%= link_to "タスク登録", new_task_path, class: "nav-link text-dark fas fa-star" %>
+          </li>
+          <li>
+            <%= link_to "タスク一覧", tasks_path, class: "nav-link text-dark fas fa-star" %>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
     <% if notice %>
       <p class="alert alert-success"><%= notice %></p>
