--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,12 @@
           <li>
             <%= link_to "タスク一覧", tasks_path, class: "nav-link text-dark fas fa-star" %>
           </li>
+          <li>
+            <%= link_to "ログイン", login_path, class: "nav-link text-dark fas fa-star" %>
+          </li>
+          <li>
+            <%= link_to "ログアウト", logout_path, method: :delete, class: "nav-link text-dark fas fa-star" %>
+          </li>
         </ul>
       </nav>
     </header>
