--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,10 @@
     <header class="bg-white text-dark border-bottom">
       <nav class="navbar navbar-expand-lg navbar-dark">
         <ul class="navbar-nav ml-auto mb-2">
+        <% if current_user %>
+          <li>
+            <%= link_to "ユーザー情報編集", edit_user_path(current_user.id), class: "nav-link text-dark fas fa-star" %>
+          </li>
           <li>
             <%= link_to "タスク登録", new_task_path, class: "nav-link text-dark fas fa-star" %>
           </li>
@@ -20,11 +24,9 @@
             <%= link_to "タスク一覧", tasks_path, class: "nav-link text-dark fas fa-star" %>
           </li>
           <li>
-            <%= link_to "ログイン", login_path, class: "nav-link text-dark fas fa-star" %>
-          </li>
-          <li>
             <%= link_to "ログアウト", logout_path, method: :delete, class: "nav-link text-dark fas fa-star" %>
           </li>
+        <% end %>
         </ul>
       </nav>
     </header>
