--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,24 +1,27 @@
 <div class="container px-5 px-sm-0 mt-3">
+  <div class="row">
+    <div class="col-sm-10 col-md-6 mx-auto">
 
-  <h2 class="text-center mt-3 mb-5">タスク編集</h2>
-
-  <div class="form">
-    <%= form_with model:@task,local:true do |f| %>
-
-      <div class="form-group">
-        <h5 for="task_name">タスク名</h5>
-        <%= f.text_field :task_name, class: "form-control task_name" %>
+      <h2 class="text-center mt-3 mb-5">タスク編集</h2>
+    
+      <div class="form">
+        <%= form_with model:@task,local:true do |f| %>
+    
+          <div class="form-group">
+            <h5 for="task_name">タスク名</h5>
+            <%= f.text_field :task_name, class: "form-control task_name" %>
+          </div>
+          <div class="form-group">
+            <h5 for="detail">詳細</h5>
+            <%= f.text_area :detail, :size=>"60x10", class: "form-control detail" %>
+          </div>
+          <div class="form-group">
+                <%= f.submit "変更を保存", class: "btn btn-outline-success" %>
+          </div>
+    
+        <% end %>
       </div>
-      <div class="form-group">
-        <h5 for="detail">詳細</h5>
-        <%= f.text_area :detail, :size=>"60x10", class: "form-control detail" %>
-      </div>
-      <div class="form-group">
-            <%= f.submit "変更を保存", class: "btn btn-outline-success" %>
-      </div>
 
-    <% end %>
+    </div>
   </div>
-
-
 </div>
