--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,10 +3,10 @@
     <div class="col-sm-10 col-md-6 mx-auto">
 
       <h2 class="text-center mt-3 mb-5">ユーザー情報編集</h2>
-    
+
       <div class="form">
         <%= form_with model:@user,local:true do |f| %>
-    
+
           <div class="form mb-2">
             <h5 for="task_name">ユーザー名</h5>
             <%= f.text_field :name, class: "form-control task_name" %>
@@ -15,11 +15,16 @@
             <%= f.label :メールアドレス %><br />
             <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
           </div>
-          
+
+          <div class="form mb-2">
+            <%= f.label :パスワード %><br />
+            <%= f.text_field :password, class: "form-control" %>
+          </div>
+
           <div class="action mt-3 mb-2">
             <%= f.submit "変更する", class: "btn btn-outline-success" %>
           </div>
-    
+
         <% end %>
       </div>
 
